--- a/Old site-Remake/css/style.css
+++ b/Old site-Remake/css/style.css
@@ -55,7 +55,7 @@ input {
 
 .lorem-text {
     visibility: hidden;
-    cursor: default;
+    /* cursor: default; */
     text-align: center;
     font-weight: 800;
     position: relative;
