--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ input {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: white 20px solid;
+    border: rgb(252, 237, 237) 20px solid;
     border-radius: 50px;
 }
 
@@ -131,8 +131,15 @@ input {
 
 @media(max-width:600px) {
 
+    body {
+        width: 275px;
+        margin: auto;
+        /* padding: auto; */
+    }
+
     .header {
         height: 350px;
+        margin-top: 75px;
     }
 
     .buttslider-list {
@@ -143,8 +150,9 @@ input {
     }
 
     .buttslider-item {
-        border: white 10px solid;
+        border: rgb(38, 121, 189) 10px solid;
         margin: 15px 0px;
+        width: 315px;
     }
 
     .buttslider-tittle {
@@ -152,13 +160,13 @@ input {
     }
 
     .buttslider-item:nth-child(2) {
-        width: 425px;
+        width: 320px;
         font-size: 25px;
     }
 
     .slidebox {
         margin-top: 30%;
-        width: 435px;
+        width: 325px;
         height: 750px;
     }
 
